--- a/portfolio.html
+++ b/portfolio.html
@@ -4,21 +4,23 @@ title: Portfolio
 permalink: /portfolio/
 ---
 
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 centered">
-            <h2>These are some of the projects that I have worked on.</h2>
-            <br>
-            <div class="hline"></div>
+<div id="portfoliowrap">
+	<div class="container mtb">
+	    <div class="row">
+	        <div class="col-lg-8 col-lg-offset-2 centered">
+	            <h2>These are some of the projects that I have worked on.</h2>
+	            <br>
+	            <div class="hline"></div>
 
-        </div>
+	        </div>
 
-            <div class="col-lg-6">
-            <h2>Technology News</h2>
-            </div>
+	            <div class="col-lg-6">
+	            <h2>School</h2>
+	            </div>
 
-            <div class="col-lg-6">
-            <br><h2>Questions and Answers</h2>
-            </div>
-    </div>
-</div><!--/container -->
+	            <div class="col-lg-6">
+	            <br><h2>Internship</h2>
+	            </div>
+	    </div>
+	</div><!--/container -->
+</div>
