--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,12 @@ permalink: /portfolio/
 
 	            <div class="col-lg-6">
 	            <h2>School</h2>
+	            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
 	            </div>
 
 	            <div class="col-lg-6">
 	            <br><h2>Internship</h2>
+	            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
 	            </div>
 	    </div>
 	</div><!--/container -->
