--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,21 @@ permalink: /portfolio/
 
 	            <div class="col-lg-6">
 	            <h2>School</h2>
-	            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s1.jpg" | prepend: site.baseurl }}" alt="">
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s2.jpg" | prepend: site.baseurl }}" alt="">
+	            <video width="320" height="240" controls>
+					<source src="movie.mp4" type="video/mp4">
+				 	<source src="movie.ogg" type="video/ogg">
+					Your browser does not support the video tag.
+				</video>
 	            </div>
+
+
 
 	            <div class="col-lg-6">
 	            <br><h2>Internship</h2>
-	            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i1.jpg" | prepend: site.baseurl }}" alt="">
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i2.jpg" | prepend: site.baseurl }}" alt="">
 	            </div>
 	    </div>
 	</div><!--/container -->
