--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,8 @@ permalink: /portfolio/
 	            <div class="col-lg-6">
 	            <h2>School</h2>
 	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s1.jpg" | prepend: site.baseurl }}" alt="">
-	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s2.jpg" | prepend: site.baseurl }}" alt="">
-	            <video width="320" height="240" controls>
-					<source src="movie.mp4" type="video/mp4">
-				 	<source src="movie.ogg" type="video/ogg">
+	            <video width="600" height="500" controls>
+					<source src="s2.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
 	            </div>
