--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@ permalink: /portfolio/
 	            <h2>School</h2>
 	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s1.jpg" | prepend: site.baseurl }}" alt="">
 	            <video width="600" height="500" controls>
-					<source src="s2.mp4" type="video/mp4">
+					<source src="{{ "/assets/img/portfolio/s2.mp4" | prepend: site.baseurl }}" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
 	            </div>
