--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,10 @@ permalink: /portfolio/
 
 	            <div class="col-lg-6">
 	            <h2>School</h2>
-	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s1.jpg" | prepend: site.baseurl }}" alt="">
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s1.jpg" | prepend: site.baseurl }}" alt=""><br>
+
 	            <video width="600" height="500" controls>
-					<source src="{{ "/assets/img/portfolio/s2.mp4" | prepend: site.baseurl }}" type="video/mp4">
+					<source src="{{ "/assets/img/portfolio/s2.mp4" | prepend: site.baseurl }}" type="video/mp4"><br>
 					Your browser does not support the video tag.
 				</video>
 	            </div>
@@ -27,8 +28,8 @@ permalink: /portfolio/
 
 	            <div class="col-lg-6">
 	            <br><h2>Internship</h2>
-	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i1.jpg" | prepend: site.baseurl }}" alt="">
-	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i2.jpg" | prepend: site.baseurl }}" alt="">
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i1.jpg" | prepend: site.baseurl }}" alt=""><br>
+	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i2.jpg" | prepend: site.baseurl }}" alt=""><br>
 	            </div>
 	    </div>
 	</div><!--/container -->
