--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@ permalink: /portfolio/
 	            <div class="col-lg-6">
 	            <h2>School</h2>
 	            <img class="img-responsive" src="{{ "/assets/img/portfolio/s1.jpg" | prepend: site.baseurl }}" alt=""><br>
+	            <p> UC Davis EEC 180A: Digital Design Project.<br>Take a look at the footage of the final result.</p>
+
 
 	            <video width="600" height="500" controls>
 					<source src="{{ "/assets/img/portfolio/s2.mp4" | prepend: site.baseurl }}" type="video/mp4"><br>
@@ -29,7 +31,9 @@ permalink: /portfolio/
 	            <div class="col-lg-6">
 	            <br><h2>Internship</h2>
 	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i1.jpg" | prepend: site.baseurl }}" alt=""><br>
+	            <p>Server that I helped setup for NASA's Deep Space Network</p>
 	            <img class="img-responsive" src="{{ "/assets/img/portfolio/i2.jpg" | prepend: site.baseurl }}" alt=""><br>
+	            <p>Down-converter circuit that I helped in designing, assembling and testing</p>
 	            </div>
 	    </div>
 	</div><!--/container -->
