--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@ permalink: /portfolio/
 
 
 	            <video width="600" height="500" controls>
-					<source src="{{ "/assets/img/portfolio/s2.mov" | prepend: site.baseurl }}" type="video/mov"><br>
+					<source src="{{ "/assets/img/portfolio/s2.mp4" | prepend: site.baseurl }}" type="video/mp4"><br>
 					Your browser does not support the video tag.
 				</video>
 	            </div>
